fix burger visibility

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -60,6 +60,10 @@
     box-sizing: border-box;
 }
 
+.header__burger-container_visible {
+    display: flex;
+}
+
 @media screen and (max-width: 450px) {
     .header__container {
         padding: 15px 15px;
